logs/chavo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/app'...
Compiling './lib/python3.5/site-packages/app/chavo.py'...
***   File "./lib/python3.5/site-packages/app/chavo.py", line 12
    print 'No function called, available packages:\n\toscar'
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/app/package_store'...
Listing './lib/python3.5/site-packages/app/package_store/constructor'...
Compiling './lib/python3.5/site-packages/app/package_store/constructor/constructor.py'...
***   File "./lib/python3.5/site-packages/app/package_store/constructor/constructor.py", line 64
    print 'only bootstrap and materialize for now'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/app/package_store/oscar'...
Listing './lib/python3.5/site-packages/app/package_store/oscar/components'...
Compiling './lib/python3.5/site-packages/app/package_store/oscar/components/boot_nav.py'...
***   File "./lib/python3.5/site-packages/app/package_store/oscar/components/boot_nav.py", line 19
    print 'creating style'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/app/package_store/oscar/components/bootstrap_form.py'...
***   File "./lib/python3.5/site-packages/app/package_store/oscar/components/bootstrap_form.py", line 31
    print "you didn't specify type of input so we will use text"
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/app/package_store/oscar/components/css_box'...
Listing './lib/python3.5/site-packages/app/package_store/oscar/components/html_box'...
Compiling './lib/python3.5/site-packages/app/package_store/oscar/components/materialize_form.py'...
***   File "./lib/python3.5/site-packages/app/package_store/oscar/components/materialize_form.py", line 39
    print "you didn't specify type of input so we will use text"
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/app/package_store/oscar/components/portfolio_materialize.py'...
***   File "./lib/python3.5/site-packages/app/package_store/oscar/components/portfolio_materialize.py", line 3
    print 'getting started'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/app/package_store/oscar/oscar.py'...
***   File "./lib/python3.5/site-packages/app/package_store/oscar/oscar.py", line 9
    print "You did not provide a package name: \n Oscar's available packages are: \n bootsrap_form ---> \t simple bootstrap form\n materialize_form ---> \t simple materialize form\n materialize_skeleton ---> \t simple materialize skeleton\n portfolio_page ---> \t Portfolio Template Materialize"
                                                                                                                                                                                                                                                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/chavo-0.1.13.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
